# FlowerTune-SmolLM2-360M-Instruct-Finance

./: README.md  pyproject.toml
flowertune-eval-finance/: README.md
flowertune-eval-finance/benchmarks/: acc_fiqa_fl.txt  acc_fpb_fl.txt  acc_tfns_fl.txt  generation_fiqa_fl.jsonl  generation_fpb_fl.jsonl  generation_tfns_fl.jsonl  train_loss.txt
flowertune_finance/: models.py
